src/objects/Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Product__c</columns>
        <columns>Points__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>